--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap');
 
-@import "tailwindcss";
-
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* =========================
    Variables base del tema
@@ -40,6 +40,7 @@ body {
   /* background: var(--background); Ahora fondo global azul */
   color: var(--foreground);      /* Texto global blanco para legibilidad */
   font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 @layer utilities {
