--- a/src/style/Calculadora.css
+++ b/src/style/Calculadora.css
@@ -17,7 +17,7 @@
 }
 
 .volumen {
-    @apply text-end text-white text-3xl font-bold 
+    @apply text-end text-white text-3xl font-bold mt-6
 }
 
 .precio {
@@ -51,7 +51,7 @@
 }
 
 .label {
-    @apply text-lg font-medium justify-center text-start content-center text-white
+  @apply text-lg font-medium justify-center text-start content-center text-white
 }
 
 .input {
