calculadora terminada (revision)
-arreglo de errores(lint)
-conversión de in a cm

--- a/src/style/Calculadora.css
+++ b/src/style/Calculadora.css
@@ -5,7 +5,7 @@
 }
 
 .fondo-contenedor{
-    @apply  rounded-3xl p-5 grid grid-cols-3
+    @apply  rounded-3xl grid grid-cols-1 lg:grid-cols-3
 }
 
 .titulo {
@@ -17,7 +17,7 @@
 }
 
 .tipo {
-    @apply text-end text-white text-4xl md:text-5xl font-bold pr-20
+    @apply text-center text-white text-4xl md:text-5xl font-bold pr-20
 }
 
 .volumen {
@@ -28,13 +28,12 @@
     @apply text-start text-white text-4xl md:text-3xl font-bold pr-20
 }
 
-
 .contenedor-2 {
-  @apply grid grid-cols-2 gap-5 mt-5;
+  @apply grid grid-cols-1 lg:grid-cols-2 gap-5 mt-5;
 }
 
 .contenedor-filas-2 {
-    @apply grid grid-rows-2 gap-1 
+    @apply grid grid-rows-1 lg:grid-rows-2 gap-1 
 }
 
 .contenedor-filas-4 {
@@ -42,8 +41,9 @@
 }
 
 .select {
-    @apply  text-center bg-white text-2xl text-blue-900 rounded-xl px-10 py-2
+    @apply  text-center bg-white text-2xl text-blue-900 rounded-xl lg:px-10 py-2
 }
+
 .tarjeta-notas {
   @apply grid  grid-rows-[1fr_auto] gap-1 bg-blue-800 rounded-xl px-3 py-2 ;
 }
@@ -54,13 +54,17 @@
 }
 
 .tarjeta-salida {
-    @apply grid grid-cols-2 gap-5
+    @apply grid lg:grid-cols-2 gap-5
    text-white place-items-center;
 }
 
 
 .tarjeta-valor {
-  @apply grid grid-rows-2 gap-5 bg-blue-600 p-6 rounded-xl text-center text-white shadow-lg
+  @apply grid lg:grid-rows-2 gap-5 bg-blue-600 p-6 rounded-xl text-center text-white shadow-lg
+}
+
+.tarjeta-forms {
+  @apply grid grid-rows-2 gap-5 bg-transparent p-8 rounded-xl text-center text-white shadow-lg
 }
 
 .label {
@@ -72,12 +76,12 @@
 }
 
 .p {
-    @apply text-end -mt-11
+    @apply text-end -mt-16 mr-20 lg:mr-0
 }
 
 .button {
-   @apply rounded-xl px-20 py-3 font-medium hover:bg-blue-900 hover:text-white
-    bg-blue-600 text-white transition duration-300
+   @apply rounded-xl px-20 py-3 font-medium hover:bg-white hover:text-blue-900
+    bg-blue-800 text-white transition duration-300
 }
 
 .envio {
@@ -91,3 +95,9 @@
 .error {
   @apply text-xs font-light text-red-500 text-center mt-3
 }
+
+.input-asesor {
+  @apply bg-white w-full  h-7 rounded-md 
+  outline-none focus:ring-2 focus:ring-blue-300 transition-all duration-300 text-black
+}
+
