--- a/src/style/Calculadora.css
+++ b/src/style/Calculadora.css
@@ -101,3 +101,8 @@
   outline-none focus:ring-2 focus:ring-blue-300 transition-all duration-300 text-black
 }
 
+.input:focus {
+  @apply ring-2 ring-blue-300 outline-none transition-all duration-300
+}
+
+
