--- a/src/style/Calculadora.css
+++ b/src/style/Calculadora.css
@@ -1,7 +1,7 @@
 
 /* formulario.css */
 .fondo-seccion {
-   @apply w-full h-full px-[15%] py-[5%] font-[Montserrat] 
+   @apply w-full h-full px-[15%] py-[5%] font-[Montserrat];
 }
 
 .contenedor-calculadora {
@@ -136,7 +136,7 @@
 }
 
 .button-disabled{
-  @apply bg-slate-500 text-white cursor-not-allowed rounded-xl xl:px-20 py-3 px-5
+  @apply bg-slate-500 text-white cursor-not-allowed rounded-xl  lg:px-20 py-3 px-5
 }
 
 .tarjeta-asunto {
