--- a/src/style/Calculadora.css
+++ b/src/style/Calculadora.css
@@ -106,7 +106,7 @@
 }
 
 .envio {
-  @apply grid grid-rows-2 gap-2 
+  @apply grid grid-rows-3 gap-2 
 }
 
 .notas {
@@ -118,12 +118,12 @@
 }
 
 .input-asesor {
-  @apply bg-white w-full h-7 rounded-md 
+  @apply bg-white w-full h-7 rounded-md px-3
   outline-none focus:ring-2 focus:ring-blue-300 transition-all duration-300 text-black
 }
 
 .input-asunto {
-  @apply bg-white w-full max-h-16 rounded-md col-span-3 
+  @apply bg-white w-full max-h-16 rounded-md col-span-3 px-3
   outline-none focus:ring-2 focus:ring-blue-300 transition-all duration-300 text-black
 }
 
