--- a/src/style/ComoFunciona.css
+++ b/src/style/ComoFunciona.css
@@ -1,28 +1,100 @@
-
+:root{
+    --azul: #0b4ba2;
+}
 
 .section {
-    @apply relative bg-gradient-to-r from-[#1B59E1] to-[#05C2F2] py-16 px-4 md:px-8 scroll-mt-10 font-[Montserrat]
+    @apply relative  bg-[#F2F2F2]  py-16 px-4 md:px-8 scroll-mt-10 font-[Montserrat]
 }
 
 .div-titulo {
-    @apply max-w-6xl mx-auto
+    @apply max-w-6xl mx-auto 
 }
 
 .title {
-    @apply text-center text-white  font-bold text-[32px] md:text-[40px] mb-12
+    @apply text-center text-white  font-bold text-[32px] md:text-[40px] mb-12 bg-[var(--azul)] rounded-3xl py-3
 }
 
 .contenedor-principal {
-    @apply relative rounded-3xl bg-white shadow-xl  md:px-20 md:py-3
+    @apply relative  md:py-3 mx-20 mb-56
+}
+
+.contenedor-central{
+    @apply left-1/2 -translate-x-1/2 absolute transform h-full
+    items-center justify-center flex flex-col
+}
+
+.linea-Vertical {
+    @apply block w-[6px] h-full bg-[var(--azul)]
+    transform z-0 top-10
 }
 
 .linea-horizontal {
-    @apply hidden absolute lg:block w-[6px] h-[90%] bg-sky-600 
-    transform left-1/2 z-0 bottom-10 top-10
+    @apply block w-full h-[6px] bg-[var(--azul)]
+    transform z-0 top-10
+}
+
+.cuadrado{
+    @apply w-8 h-9 bg-[var(--azul)]
 }
 
 .grid-pasos {
-    @apply relative z-10 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-8 
+    @apply relative z-10 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-8 -mx-36
+}
+
+.imagen-paso-1 {
+    @apply w-44 h-44 absolute -left-8 top-8 -translate-y-1/2
+}
+
+.imagen-paso-2 {
+    @apply w-60 h-60 absolute -right-24 top-64 -translate-y-1/2
+}
+
+.imagen-paso-3 {
+    @apply w-64 h-64 absolute -left-14 top-[60%] -translate-y-1/2
+}
+
+.imagen-paso-4 {
+    @apply w-80 absolute -right-28 top-[82%] -translate-y-1/2
+}
+
+.imagen-paso-5 {
+     @apply w-64 h-64 absolute -left-20 top-[88%] -translate-y-1/2
+}
+
+.imagen-paso-6 {
+     @apply w-48 h-48 absolute -left-10 top-[8%]
+}
+
+.contenedor-paso{
+    @apply h-full w-[80%] 
+}
+
+.contenedor-paso-derecho{
+    @apply h-full w-[90%]  
+}
+
+.contenedor-informacion{
+    @apply grid grid-rows-2 
+}
+
+.contenedor-paso-titulo{
+    @apply bg-[var(--azul)] rounded-xl text-white  font-bold text-[32px] py-5 text-center px-5 w-[85%] ml-auto
+}
+
+.contenedor-paso-titulo-derecho{
+    @apply bg-[var(--azul)] rounded-xl text-white  font-bold text-[32px] py-2 text-center px-24 w-[80%] ml-auto
+}
+
+.contenedor-paso-texto{
+    @apply text-[18px] text-blue-600 mt-5 w-[64%] left-[25%] font-light text-center relative
+}
+
+.contenedor-paso-texto-derecho{
+    @apply text-[18px] text-blue-600 mt-5 w-[55%] left-[30%] font-light text-center relative
+}
+
+.contenedor-paso-texto-central{
+    @apply text-[18px] text-blue-600 mt-5 w-[75%] left-[20%] font-light text-center relative
 }
 
 .div-paso {
@@ -33,13 +105,6 @@
     @apply hidden md:flex w-16 h-16 rounded-full bg-sky-600 text-white items-center justify-center font-bold mt-5 mb-2 text-3xl
 }
 
-.imagen-paso {
-    @apply w-56 h-36 rounded-xl flex items-center justify-center mb-10 lg:mb-7
-}
-
-.texto-paso {
-    @apply text-sm text-[#333] mb-1
-}
 
 .nota {
     @apply text-center text-sm font-bold text-black mt-8 italic
