--- a/src/style/Tarifas.css
+++ b/src/style/Tarifas.css
@@ -21,11 +21,15 @@
 }
 
 .titulo-tarifas {
-    @apply text-center font-bold text-[14px] mt-2;
+    @apply text-center font-bold text-[14px] ;
 }
 
 .subtitulo-tarifas{
-    @apply text-center font-light mb-4 text-xs;
+    @apply text-center font-light text-xs;
+}
+
+.subtitulo-resaltado-tarifas{
+    @apply text-center font-bold mb-4 text-xs;
 }
 
 .contenedor-tarifas-informacion{
@@ -33,9 +37,17 @@
 }
 
 .precio-tarifa{
-    @apply  font-bold text-[30px] mb-4
+    @apply  font-bold text-[30px] 
 }
 
 .texto-tarifa{
     @apply text-xs mt-4 text-justify
+}
+
+.contenedor-adicionales{
+    @apply rounded-xl p-6 md:px-24 max-w-4xl w-full h-full;
+}
+
+.texto-adicionales{
+    @apply space-y-3 text-sm md:text-base text-blue-800 font-semibold
 }
