--- a/src/style/Servicios.css
+++ b/src/style/Servicios.css
@@ -1,23 +1,51 @@
 .section {
-    @apply bg-[#c51515] py-14 scroll-mt-20 font-[Montserrat]
+    @apply py-14 scroll-mt-20 font-[Montserrat] h-full 
 }
 
+
+
+.contenedor-servicios{
+    @apply relative 
+     w-full h-full
+}
+
+.contenedor-tarjetas-superior{
+    @apply grid grid-cols-3 h-full w-full
+}
+
+.contenedor-tarjetas-inferior{
+    @apply grid grid-cols-2  h-full w-full px-10 mt-10
+}
+
+
+
+
+
+/* #region TEXT */
+
 .texto-titulo{
-    @apply text-center font-[Montserrat] font-bold text-sky-600 text-[36px] md:text-[42px];
+    @apply text-center  font-bold text-sky-600 text-[36px] md:text-[42px];
 }
 
 .subtitulo-texto{
-    @apply mt-3 text-center text-[#333333] font-[Montserrat] text-[16px] md:text-[18px] max-w-4xl mx-auto
+    @apply mt-3 text-center text-[#333333]  text-[16px] md:text-[18px] max-w-4xl mx-auto mb-10
 }
 
-.contenedor-tarjeta{
-    @apply relative rounded-[26px] bg-gradient-to-r from-[#1E51D2] to-[#2CD0F6] shadow-[0_18px_48px_rgba(0,0,0,0.2)]
-}
 
-.titulo-tarjeta{
-    @apply text-white font-[Montserrat] font-extrabold text-[18px] md:text-[30px] leading-tight mb-4
-}
+/* #endregion */
 
+/* #region TARJETA */
 .div-tarjeta{
-    @apply grid grid-cols-1 md:grid-cols-2 gap-5 items-start
+    @apply grid grid-cols-1 md:grid-cols-4 text-center bg-blue-900 m-5
+    h-full rounded-[26px] shadow-[0_18px_48px_rgba(0,0,0,0.2)] text-white p-5
 }
+
+.titulo-texto-tarjeta{
+    @apply col-span-4 text-white font-extrabold text-[18px] md:text-[20px] leading-tight mb-4
+}
+
+.icono-tarjeta{
+    @apply invert brightness-0 min-w-[30px]
+}
+
+/* #endregion */
